# ChainReaction-bot

./: CMakeLists.txt
src/: Main.cpp  argParse.cpp  argParse.h  board.h  board.hpp  boardEval.hpp  boardIter.hpp  boardStep.hpp  main.cpp  negamax.hpp  score.h  search.hpp  testsCriticalBoards.hpp  tests_critical.cpp  tests_critical.hpp  types.h  util.hpp
src/lib/: args.hpp
